# Aura-Swarm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.cursor/rules/: project-conventions.mdc
aura/: __init__.py  cli.py  config.py
config/: abilities.yaml.example  aura.yaml.example
hooks/: README.md  post-merge
tests/: __init__.py  conftest.py  test_abilities_config.py  test_aura_cli.py  test_aura_config_claude.py  test_aura_config_oss.py  test_aura_full_flow.py  test_memory_stages_aura.py  test_run_module_tests.py
