[project]
name = "aura-swarm"
version = "0.1.0"
description = "Aura Swarm — unified launcher (Aura) for all entries: backend, services, and tools"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agent-backend>=0.1.0",
]

[project.scripts]
Aura = "aura.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aura"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "module_integration: run module test suites from Aura (requires workspace layout)",
    "real_oss: run test against real Aliyun OSS using Aura config (requires oss2 and aura.yaml oss_*).",
]
addopts = "-v"
